media/css/zamboni/developers.css
/* ... */
.devhub-form .author:hover .remove,
.devhub-form tr:hover .tip,
.devhub-form tr:hover > td > a.remove,
.compat-versions tr:hover a.remove,
#existing_locales li:hover a.remove {
    background-color: #CCC;
}

.devhub-form tr:hover .tip:hover {
    cursor: help;
}

.devhub-form tr:hover .tip:hover,
.devhub-form tr:hover a.remove:hover,
.compat-versions tr:hover a.remove:hover,
#existing_locales li:hover a.remove:hover,
a.remove:hover {
    background-color: #2A4364;
}

.devhub-form .empty {
    color: #999;
    font-style: italic;
}

ul.refinements:last-child {
    border-bottom-width: 0;
    margin-bottom: 0;
    padding-bottom: 0;
}

#trans-tags input,
#trans-name input {
    width: 80%;
}

#submit-describe #trans-name {
    display: inline-block;
    margin-right: 15px;
    width: 375px;
}

#submit-describe #trans-name input {
    width: 370px;
}

/*#id_homepage, #id_support_url, #id_support_email {*/
#trans-support_email input,
#trans-homepage input,
#trans-support_url input {
    width: 60%;
}

#slug_edit span, #id_slug {
  font-family: Verdana !important;
  /** This is so they match up size-wise **/
}

#slug_edit a {
    font-size: 10px;
}

#addon_tags_edit input {
    width: 80%;
}

form .char-count,
.html-rtl form .edit-addon-details .char-count {
    float: left;
}
.html-rtl form .char-count,
form .edit-addon-details .char-count {
    float: right;
}

form .char-count {
    font-size: 0.8em;
}
form .edit-addon-details .char-count {
    font-size: 1em;
}

form .char-count.error {
    margin-bottom: 0;
}

form .char-count b,
span.locale,
.devhub-form label {
    font-weight: normal;
}
.devhub-form th label {
    font-weight: bold;
    display: inline;
}

form .char-count,
span.locale {
    color: #888;
}

span.locale {
    display: block;
    font-size: .9em;
    line-height: 1;
    margin-top: 2px;
}

label.above-the-field .locale {
    display: inline;
    margin-left: 0.5em;
}

#addon_categories_edit ul {
    float: left;
    margin-right: 20px;
}

/*
Bug 622030- TODO (potch) fix this later

#addon_description,
#developer_comments {
    max-height: 6.4em;
    overflow: hidden;
}
*/
.edit-addon-details {
    padding-top: 3px;
    font-size: 0.8em;
}

.edit-addon-details,
form .char-count b {
    color: #555;
}

.edit-media-details {
    padding-bottom: 5px;
    padding-top: 3px;
    font-size: 0.9em;
    color: #444;
}

.edit-media-details .tip {
    font-size: 12px;
    height: 16px;
    width: 16px;
}

#file-list .preview {
    overflow: auto;
    margin-bottom: 15px;
    padding-bottom: 15px;
    border-bottom: 1px dotted #ADD0DC;
}

#file-list div:last-child {
    display: none;
}

#file-list .preview .preview_extra {
    display: none;
}

#file-list .preview label {
    color: #666666;
    display: block;
    font-size: 0.9em;
    font-weight: bold;
    padding-bottom: 0;
}

#file-list .preview textarea {
    font-size: 0.9em;
    height: 34px;
    line-height: 1.1em;
    width: 375px;
}

.preview-thumb {
    border: 3px solid #D2EDF5;
    float: left;
    height: 94px;
    margin-right: 15px;
    text-align: right;
    width: 125px;
}

.preview-thumb img {
    max-width: 125px;
    max-height: 94px;
}

.edit-previews-readonly .preview-thumb {
    margin-bottom: 10px;
    margin-right: 10px;
}

#icons_default {
    border: 1px solid #6A89AC;
    max-height: 86px;
    overflow-x: hidden;
    overflow-y: scroll;
    padding: 5px;
    background-color: #fff;
}

#icon_preview_readonly img {
    margin-right: 20px;
}

#icon_preview {
    float: right;
    margin-left: 10px;
    width: 76px;
}

#icon_preview .icon_preview {
    border: 1px solid #6A89AC;
    text-align: center;
    padding: 5px;
    background-color: #fff;
}

#icon_preview .icon_preview img {
    vertical-align: middle;
}

#icon_preview_32 {
    line-height: 32px;
    width: 32px;
    height: 32px;
}

#icon_preview_32 img {
    max-width: 32px;
    max-height: 32px;
}

#icon_preview_48 {
    line-height: 48px;
    width: 48px;
    height: 48px;
}

#icon_preview_48 img {
    max-width: 48px;
    max-height: 48px;
}

#icon_preview_64 {
    line-height: 64px;
    width: 64px;
    height: 64px;
}

#icon_preview_64 img {
    max-width: 64px;
    max-height: 64px;
}

#icons_default label {
    display: none;
}

#icons_default li {
    display: inline-block;
}

#icons_default li.hide {
    display: none;
}

#icons_default li a {
    padding:8px;
    display:block;
    -moz-border-radius: 3px;
}

#icons_default li a:hover {
    background-color:#eee;
}

#icons_default li a img {
    display: block;
}

#icons_default li a.active {
    border: 1px solid #CADBFA;
    background-color: #E8F0FD;
    padding: 7px;
}

/* @end */

/* @group Version Compatibility */

.compat-update-modal {
    min-height: 425px;
}
.compat-update-modal > :first-child {
    margin-top: 0;
}
.compat-update-modal > :last-child {
    margin-bottom: 0;
}

.compat-versions table {
    width: 100%;
}
.compat-versions tbody {
    border: 1px solid #000;
    border-width: 1px 0;
}
.compat-versions thead th {
    color: #888;
}
.compat-versions tbody tr:not(:last-child) {
    border-bottom: 1px dotted #a5bfce;
}

.compat-versions td.app,
.new-apps a.app {
    font-weight: bold;
    min-height: 24px;
    padding-left: 35px;
}
.compat-versions td.app {
    background-position: 0 0.5em;
    -moz-background-size: auto 24px;
    -wekbkit-background-size: auto 24px;
    background-size: auto 24px;
    line-height: 30px;
    vertical-align: top;
}
.devhub-form .compat-versions td.app {
    background-position: 0 12px;
}
.new-apps a.app {
    background-position: 0 50%;
    -moz-background-size: auto 16px;
    -wekbkit-background-size: auto 16px;
    background-size: auto 16px;
    line-height: 24px;
}

.compat-versions p.add-app {
    margin-top: -1em;
}
.compat-versions p.add-app a,
.new-apps a.app {
    display: block;
}
.compat-versions p.add-app + .new-apps {
    margin: -1em 0 1em;
}
/* ... */

